@startuml
abstract class Animal {
    -id: int
    -name: String
    -birthDate: LocalDate
    -commands: List<String>
    +{static} counter: int
    --
    +Animal(name: String, birthDate: LocalDate)
    +getId(): int
    +getName(): String
    +setName(name: String): void
    +getBirthDate(): LocalDate
    +setBirthDate(birthDate: LocalDate): void
    +getCommands(): List<String>
    +addCommand(command: String): void
    +removeCommand(command: String): void
    +getAgeInMonths(): int
    +{abstract} getType(): String
    +{static} getTotalCount(): int
}

abstract class Pets {
    +Pets(name: String, birthDate: LocalDate)
    +getType(): String
}

abstract class PackAnimals {
    +PackAnimals(name: String, birthDate: LocalDate)
    +getType(): String
}

class Dog {
    +Dog(name: String, birthDate: LocalDate)
    +getType(): String
}

class Cat {
    +Cat(name: String, birthDate: LocalDate)
    +getType(): String
}

class Hamster {
    +Hamster(name: String, birthDate: LocalDate)
    +getType(): String
}

class Horse {
    +Horse(name: String, birthDate: LocalDate)
    +getType(): String
}

class Camel {
    +Camel(name: String, birthDate: LocalDate)
    +getType(): String
}

class Donkey {
    +Donkey(name: String, birthDate: LocalDate)
    +getType(): String
}

class AnimalRegistry {
    -animals: List<Animal>
    -scanner: Scanner
    -dateFormatter: DateTimeFormatter
    --
    +AnimalRegistry()
    +addAnimal(): void
    +listCommands(): void
    +teachCommand(): void
    +listByBirthDate(): void
    +showTotalCount(): void
    +showMenu(): void
    -createAnimal(choice: int, name: String, birthDate: LocalDate): Animal
    -getIntInput(): int
    +close(): void
}

class Main {
    +{static} main(args: String[]): void
}

Animal <|-- Pets
Animal <|-- PackAnimals
Pets <|-- Dog
Pets <|-- Cat
Pets <|-- Hamster
PackAnimals <|-- Horse
PackAnimals <|-- Camel
PackAnimals <|-- Donkey
AnimalRegistry --> Animal : uses
Main --> AnimalRegistry : uses
@enduml 